<resources>
    <string name="app_name">KSRCT app</string>
    <string name="registor_number">Register Number</string>
    <string name="login">Sign In</string>
    <string name="password">Password</string>
    <string name="k_s_rangasamy_college_of_technology">K.S.Rangasamy College of Technology</string>
    <string name="need_a_new_account">Need a New Account? Sign Up</string>
    <string name="todo">TODO</string>
    <string name="aut">(An autonomous institution)</string>
    <string name="confirm_password">confirm password</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="forget_password">Forget password?</string>
    <string name="sign_in">Sign In</string>
    <string name="reg_sus">Registration success</string>
    <string name="nav_prof">Profile</string>
    <string name="nav_cir">Circulars</string>
    <string name="nav_acad">Academics</string>
    <string name="nav_lib">Library</string>
    <string name="date">-</string>
    <string name="logout">Logout</string>
    <string name="feedback">Feedback</string>
    <string name="about">About</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="app_info">app-info</string>
    <string name="m_shankar54321_gmail_com">m.shankar54321@gmail.com</string>
    <string name="e_mail">E-mail</string>
    <string name="nano_science_and_technology">Nano Science and Technology</string>
    <string name="department">Department</string>
    <string name="shankar_m">Shankar M</string>
    <string name="developer">Developer</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Under Construction</string>
    <string name="curr_acad">Current Academics</string>
    <string name="view_academic_details">Academic Details</string>
    <string name="attendance_details">Attendance</string>
    <string name="improvement_test">Improvement Test</string>
    <string name="name">Name</string>

    <string name="open">open</string>
    <string name="closer">close</string>
    <string name="search">search...</string>


</resources>
