<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".LoginAct">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="106dp"
            android:layout_marginTop="75dp"
            android:contentDescription="@string/k_s_rangasamy_college_of_technology"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/k_s_rangasamy_college_of_technology"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aut"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/rnum"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/input_textstyle"
            android:hint="@string/registor_number"
            android:inputType="textEmailAddress"
            android:padding="5dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/pass"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="23dp"
            android:background="@drawable/input_textstyle"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/log"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rnum" />

        <Button
            android:id="@+id/log"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/button_style"
            android:padding="10dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </LinearLayout>






</LinearLayout>