<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".student.ProfileFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/pic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="20dp"
            app:srcCompat="@drawable/ic_accc"/>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:layout_margin="20dp">
            <TableRow>
                <TextView
                    android:id="@+id/text1"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginTop="0dp"
                    android:text="@string/name"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/text2"
                    android:layout_width="193dp"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:text="@string/shankar_m" />
            </TableRow>
            <TableRow>
                <TextView
                    android:id="@+id/text3"
                    android:layout_width="170dp"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/registor_number"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/text4"
                    android:layout_width="193dp"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="1724126" />
            </TableRow>

        </TableLayout>
    </LinearLayout>

</FrameLayout>