<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:background="@drawable/bg"
    tools:context=".student.AcademicFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:id="@+id/linear1"
        android:orientation="vertical"
        android:layout_marginStart="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/curr_acad"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <android.support.v7.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="3dp"
                android:layout_marginStart="10dp"
                app:contentPadding="0dp"
                android:id="@+id/acad_detai"
                app:cardBackgroundColor="@color/trans"
                app:cardCornerRadius="0dp"
                app:cardElevation="0dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="15dp"
                        android:src="@drawable/acad"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:text="@string/view_academic_details"
                        android:textSize="10sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="3dp"
                android:layout_marginStart="10dp"
                app:contentPadding="0dp"
                android:id="@+id/acad_detai2"
                app:cardCornerRadius="0dp"
                app:cardBackgroundColor="@color/trans"
                app:cardElevation="0dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="15dp"
                        android:src="@drawable/logo"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:textColor="@color/white"
                        android:text="@string/attendance_details"
                        android:textSize="10sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="3dp"
                app:contentPadding="0dp"
                android:id="@+id/acad_detai3"
                app:cardCornerRadius="0dp"
                app:cardBackgroundColor="@color/trans"
                app:cardElevation="0dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="15dp"
                        android:src="@drawable/logo"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:textColor="@color/white"
                        android:text="@string/improvement_test"
                        android:textSize="10sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
            </LinearLayout>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="210dp"
            android:orientation="vertical"
            android:layout_marginStart="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="end semester details"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
        <android.support.v7.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="3dp"
            app:contentPadding="0dp"
            app:cardCornerRadius="0dp"
            app:cardBackgroundColor="@color/trans"
            app:cardElevation="0dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/logo"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:text="@string/view_academic_details"
                    android:textSize="10sp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="3dp"
            android:layout_marginStart="10dp"
            app:contentPadding="0dp"
            app:cardCornerRadius="0dp"
            app:cardBackgroundColor="@color/trans"
            app:cardElevation="0dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="15dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textColor="@color/white"
                    android:textSize="10sp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="3dp"
                app:contentPadding="0dp"
                app:cardCornerRadius="0dp"
                app:cardBackgroundColor="@color/trans"
                app:cardElevation="0dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="15dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:textColor="@color/white"
                        android:textSize="10sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/acad_frame">

    </FrameLayout>

</FrameLayout>